<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright 2014 Formicary Ltd
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>net.formicary.maven-parent</groupId>
    <artifactId>maven-parent</artifactId>
    <version>1.0.1</version>
  </parent>

  <scm>
    <connection>scm:git@github.com:formicary/remoterun.git</connection>
    <url>scm:git@github.com:formicary/remoterun.git</url>
    <developerConnection>scm:git:git@github.com:formicary/remoterun.git</developerConnection>
  </scm>

  <groupId>net.formicary.remoterun</groupId>
  <artifactId>remoterun</artifactId>
  <version>1.7-SNAPSHOT</version>
  <packaging>pom</packaging>
  <modules>
    <module>common</module>
    <module>agent</module>
    <module>embed</module>
    <module>examples</module>
  </modules>

  <name>RemoteRun</name>
  <description>Java remote process execution toolkit</description>
  <url>http://www.formicary.net</url>

  <licenses>
    <license>
      <name>The Apache Software License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>repo</distribution>
      <comments>A business-friendly OSS license</comments>
    </license>
  </licenses>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <jdk.version>1.7</jdk.version>
  </properties>

  <distributionManagement>
    <repository>
      <id>formicary-nexus</id>
      <name>Internal Releases</name>
      <url>https://nexus.formicary.net/nexus/content/repositories/formicary-releases/</url>
    </repository>
    <snapshotRepository>
      <id>formicary-nexus</id>
      <name>Internal Snapshots</name>
      <url>https://nexus.formicary.net/nexus/content/repositories/formicary-snapshots/</url>
    </snapshotRepository>
  </distributionManagement>

  <build>
    <plugins>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.12</version>
        <configuration>
          <argLine>-Xmx512m -XX:MaxPermSize=92m</argLine>
        </configuration>
      </plugin>
      <plugin>
        <inherited>true</inherited>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>${jdk.version}</source>
          <target>${jdk.version}</target>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-jar-plugin</artifactId>
        <configuration>
          <includes>
            <include>**/*</include>
          </includes>
        </configuration>
        <version>2.4</version>
      </plugin>
    </plugins>
  </build>
  <dependencies>
    <dependency>
      <groupId>com.google.protobuf.tools</groupId>
      <artifactId>maven-protoc-plugin</artifactId>
      <version>0.3.2</version>
      <type>maven-plugin</type>
      <scope>build</scope>
    </dependency>
  </dependencies>
</project>
